added electron files for quick prototype

--- a/server/ui/package.json
+++ b/server/ui/package.json
@@ -2,7 +2,7 @@
   "name": "pit_webui",
   "version": "0.0.1",
   "description": "Dockpit Web UI",
-  "main": "gulpfile.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
